# turboquant-experiments

./: .gitignore  README.md  debug_cache.py  debug_kivi.py  language_model_improvements  pyproject.toml
docs/superpowers/plans/: 2026-04-08-phase1-kv-cache-inspection.md  2026-04-09-phase2-eval-harness.md  2026-04-09-phase3-turboquant-eval.md  2026-04-18-part2-parler-impl.md
docs/superpowers/specs/: 2026-04-08-turboquant-experiments-design.html  2026-04-08-turboquant-experiments-design.md  2026-04-14-part2-vibevoice-design.md  2026-04-18-part2-parler-pivot.md  _style.css
language-model-improvements/: eval_core.py  eval_utils.py  handrolled_turboquant.py  kv_utils.py
language-model-improvements/results/: 01_kv_cache_inspection.txt  baseline.json  baseline_autoreg.json  handrolled_2bit.json  handrolled_4bit.json  kivi_2bit.json  kivi_4bit.json  summary.json  turboquant_2bit.json  turboquant_3bit.json  turboquant_4bit.json  turboquant_k2v2.json  turboquant_k4v2.json  turboquant_k4v4.json
language-model-improvements/scripts/: 01_inspect_kv_cache.py  02_baseline_eval.py  03_turboquant_eval.py  04_plot_results.py  05_combine_results.py
language-model-improvements/tests/: test_eval_utils.py  test_handrolled_turboquant.py  test_kv_utils.py  test_numerical_equivalence.py
notes/: 00-foundations.md  01-kv-cache-reality.md  02-what-im-measuring.md  03-results.md  04-parler-results.md  issue-log.md  part2-vibevoice-blocked.md  part2-wer-limitation.md
notes/scratch/: jl_demo.py  outlier_demo.py
speech-tts-improvements/parler/: README.md  voices_and_texts.py
speech-tts-improvements/parler/results/: algorithm_explained.html  audio_comparison.html  metrics.json  metrics_aggregated.json  metrics_multiseed.json  timings_baseline.json  timings_naive_2bit.json  timings_noproj_2bit.json  timings_seed19_baseline.json  timings_seed19_tq_2bit.json  timings_seed19_tq_3bit.json  timings_seed19_tq_4bit.json  timings_seed7_baseline.json  timings_seed7_tq_2bit.json  timings_seed7_tq_3bit.json  timings_seed7_tq_4bit.json  (+3 more)
speech-tts-improvements/scripts/: 00_test_vibevoice.py  00_test_vibevoice_cpu.py  02_inspect_model_structure.py
speech-tts-improvements/vibevoice/: README.md
(+11 files in other folders)
