[project]
name = "turboquant-experiments"
version = "0.1.0"
description = "Comparative benchmarks of TurboQuant on Llama-3.1-8B and VibeVoice"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "accelerate>=0.34",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "huggingface-hub>=0.25",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
